8305457: Implement java.io.IO
Reviewed-by: naoto, smarks, jpai, jlahoda