@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023, 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,10 +21,16 @@
  * questions.
  */
 
-// key: compiler.misc.feature.implicit.classes
-// key: compiler.warn.preview.feature.use.plural
-// key: compiler.warn.is.preview
-// options: -source ${jdk.version} --enable-preview -Xlint:preview
+import java.io.IOException;
 
-public static void main(String... args) {
+import static java.io.IO.readln;
+
+public class Input {
+
+    public static void main(String[] args) throws IOException {
+        if (args[0].equals("0"))
+            System.out.print(readln(null));
+        else
+            System.out.print(readln(args[1]));
+    }
 }
